// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect TreeSelect baseVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  
  <div
    class="t-input__wrap t-select-input t-select-input--empty"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder="请选择"
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`TreeSelect TreeSelect collapsedVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-input__wrap t-tag-input t-select-input t-select-input--multiple t-select-input--empty demo-space"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <span
          class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
          style="max-width: 300px;"
        >
          <!---->
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            
            <!---->
            
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        
      </div>
      <input
        class="t-input__inner"
        placeholder=""
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
  
  <div
    class="t-input__wrap t-tag-input t-select-input t-select-input--multiple t-select-input--empty"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <span
          class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
          style="max-width: 300px;"
        >
          <!---->
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            
            <!---->
            
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        
      </div>
      <input
        class="t-input__inner"
        placeholder=""
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`TreeSelect TreeSelect filterableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="operation"
  >
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="default"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           默认 
          
          
        </span>
      </label>
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="function"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          
          
           自定义方法 
          
          
        </span>
      </label>
      
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
  
  <div
    class="t-input__wrap t-select-input t-select-input--empty"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder="请选择"
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`TreeSelect TreeSelect lazyVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-lazy"
>
  
  <div
    class="t-input__wrap t-select-input t-select-input--empty"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder="请选择"
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`TreeSelect TreeSelect multipleVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-multiple"
>
  
  <div
    class="t-input__wrap t-tag-input t-select-input t-select-input--multiple t-select-input--empty"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <span
          class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
          style="max-width: 300px;"
        >
          <!---->
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            
            <!---->
            
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        
      </div>
      <input
        class="t-input__inner"
        placeholder=""
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`TreeSelect TreeSelect prefixVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-prefix"
>
  
  <div
    class="t-input__wrap t-select-input t-select-input--empty"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix t-input__prefix-icon"
      >
        
        
        
        <svg
          class="t-icon t-icon-browse"
        >
          <use
            href="#t-icon-browse"
          />
        </svg>
        
        
        
      </span>
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder="请输入"
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`TreeSelect TreeSelect propsVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  
  <div
    class="t-input__wrap t-select-input t-select-input--empty"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder="请选择"
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`TreeSelect TreeSelect valuedisplayVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-input__wrap t-select-input t-select-input--empty"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        
        
        
        () 
        
        
        
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder=""
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
  
  <div
    class="t-input__wrap t-tag-input t-select-input t-select-input--multiple t-select-input--empty tree-select-multiple"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        
        
        
        
        
        
        
        
        
      </div>
      <input
        class="t-input__inner"
        placeholder=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`TreeSelect TreeSelect valuetypeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-input__wrap t-select-input t-select-input--empty"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <!---->
        <!---->
        
      </div>
      <input
        class="t-input__inner"
        placeholder="请选择"
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
  
  <div
    class="t-input__wrap t-tag-input t-select-input t-select-input--multiple t-select-input--empty tree-select-multiple"
  >
    <div
      class="t-input t-is-readonly t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        
        <span
          class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
          style="max-width: 300px;"
        >
          <!---->
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            
            <!---->
            
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        
      </div>
      <input
        class="t-input__inner"
        placeholder=""
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        
        <svg
          class="t-fake-arrow"
          disabled="false"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
        
      </span>
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;
